3-data-RDF-conversion/Triplestore/kubernetes/secoresearch-fuseki/secoresearch-fuseki-service.yaml
# Copyright 2023 Fraunhofer Institute SCAI, St. Augustin, Germany
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.
apiVersion: v1
kind: Service
metadata:
  labels:
    component: secoresearch-fuseki
    deployment-id: secoresearch-fuseki
  name: secoresearch-fuseki-service
spec:
  ports:
    - name: "secoresearch"
      port: 3030
      targetPort: 3030
  selector:
    component: secoresearch-fuseki
    deployment-id: secoresearch-fuseki
